# cubebox

./: .coverage  .gitignore  CLAUDE.md
.kiro/specs/cue/: .config.kiro
.kiro/specs/deep-agent-executor/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/steering/: agent-system-design.md  agent.md
backend/: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  config.development.yaml  config.production.yaml  config.test.yaml  config.yaml  main.py  pyproject.toml
backend/cubebox/: __init__.py  app.py  config.py
backend/cubebox/agents/: __init__.py  config.py  executor.py  schemas.py
backend/cubebox/api/: app.py  exceptions.py
backend/cubebox/api/routes/: health.py
backend/cubebox/api/routes/v1/: __init__.py  agents.py
backend/cubebox/llm/: __init__.py  config.py  factory.py  openai_compatible.py
backend/cubebox/mcp/: __init__.py  client.py
backend/cubebox/memory/: __init__.py  manager.py
backend/cubebox/sandbox/: __init__.py  config.py  executor.py  opensandbox.py  skills.py
backend/cubebox/tools/: __init__.py  registry.py
backend/cubebox/tools/builtin/: __init__.py  calculator.py
backend/cubebox/utils/: __init__.py  log.py  logger.py
backend/scripts/: check.sh  format.sh
backend/scripts/dev/: llm_factory_example.py  llm_reasoning_example.py  test_deepagent_fix.py
backend/skills/builtin/git-commit/: SKILL.md
backend/tests/: conftest.py  test_api.py  test_logger.py  test_tools.py
backend/tests/e2e/: __init__.py  conftest.py  helpers.py  test_agent_skills.py  test_agents.py  test_skills_sync.py
misc/sandbox-image/: Dockerfile  build.sh
misc/scripts/: pre-commit
