[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cubebox"
version = "0.1.0"
description = "cubebox - AI Agent System Backend with DeepAgents Framework"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.1",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.1",
    "loguru>=0.7.3",
    "dynaconf>=3.2.11",
    "langchain>=1.2.10",
    "langchain-core>=1.2.17",
    "langchain-openai>=1.1.10",
    "langgraph>=1.0.10",
    "yarl>=1.23.0",
]

[project.optional-dependencies]
dev = ["black>=24.2.0", "autoflake>=2.3.1", "isort>=6.0.1"]
test = ["pytest>=7.4.0", "pytest-asyncio>=1.3.0", "pytest-cov>=4.1.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=term-missing"
filterwarnings = ["ignore::DeprecationWarning", "ignore::UserWarning"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
